Bug 808277 - Show the progress of downloads that are not visible in the Downloads Panel in a summary. r=mak.
UltraBlame original commit: a3019cbb094554ca00a8bcb5f47f3fd1486ddd4e

--- a/browser/components/downloads/content/downloads.css
+++ b/browser/components/downloads/content/downloads.css
@@ -541,3 +541,39 @@ visibility
 hidden
 ;
 }
+#
+downloadsSummary
+:
+not
+(
+[
+inprogress
+=
+"
+true
+"
+]
+)
+#
+downloadsSummaryProgress
+#
+downloadsSummary
+:
+not
+(
+[
+inprogress
+=
+"
+true
+"
+]
+)
+#
+downloadsSummaryDetails
+{
+display
+:
+none
+;
+}
