--- a/browser/themes/gnomestripe/downloads/downloads.css
+++ b/browser/themes/gnomestripe/downloads/downloads.css
@@ -70,6 +70,8 @@ pointer
 ;
 }
 #
+downloadsSummary
+#
 downloadsPanel
 [
 hasdownloads
@@ -157,6 +159,8 @@ dialogtext
 dotted
 ;
 }
+#
+downloadsSummary
 richlistitem
 [
 type
@@ -170,6 +174,95 @@ height
 :
 6em
 ;
+-
+moz
+-
+padding
+-
+end
+:
+0
+;
+color
+:
+inherit
+;
+}
+#
+downloadsSummary
+{
+padding
+:
+8px
+38px
+8px
+12px
+;
+cursor
+:
+pointer
+;
+}
+#
+downloadsSummary
+>
+.
+downloadTypeIcon
+{
+height
+:
+32px
+;
+width
+:
+32px
+;
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+mozapps
+/
+skin
+/
+downloads
+/
+downloadIcon
+.
+png
+"
+)
+;
+}
+#
+downloadsSummaryDescription
+{
+color
+:
+-
+moz
+-
+nativehyperlinktext
+;
+}
+richlistitem
+[
+type
+=
+"
+download
+"
+]
+{
 margin
 :
 0
@@ -215,19 +308,6 @@ transparent
 padding
 :
 8px
-;
--
-moz
--
-padding
--
-end
-:
-0
-;
-color
-:
-inherit
 ;
 }
 richlistitem
