--- a/browser/themes/winstripe/downloads/downloads.css
+++ b/browser/themes/winstripe/downloads/downloads.css
@@ -79,6 +79,8 @@ theme
 )
 {
 #
+downloadsSummary
+#
 downloadsPanel
 [
 hasdownloads
@@ -119,6 +121,8 @@ inset
 ;
 }
 }
+#
+downloadsSummary
 richlistitem
 [
 type
@@ -132,6 +136,95 @@ height
 :
 7em
 ;
+-
+moz
+-
+padding
+-
+end
+:
+0
+;
+color
+:
+inherit
+;
+}
+#
+downloadsSummary
+{
+padding
+:
+8px
+38px
+8px
+12px
+;
+cursor
+:
+pointer
+;
+}
+#
+downloadsSummary
+>
+.
+downloadTypeIcon
+{
+height
+:
+24px
+;
+width
+:
+24px
+;
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+mozapps
+/
+skin
+/
+downloads
+/
+downloadIcon
+.
+png
+"
+)
+;
+}
+#
+downloadsSummaryDescription
+{
+color
+:
+-
+moz
+-
+nativehyperlinktext
+;
+}
+richlistitem
+[
+type
+=
+"
+download
+"
+]
+{
 margin
 :
 0
@@ -177,19 +270,6 @@ transparent
 padding
 :
 8px
-;
--
-moz
--
-padding
--
-end
-:
-0
-;
-color
-:
-inherit
 ;
 }
 richlistitem
